--- a/TealiumFirebaseExample/Podfile
+++ b/TealiumFirebaseExample/Podfile
@@ -1,12 +1,12 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '10.0'
 
 target 'TealiumFirebaseExample' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for TealiumFirebaseExample
-  pod 'TealiumFirebase', '~> 1.1'
+  pod 'TealiumFirebase', :path=> '../'
   pod 'tealium-swift/TealiumLogger', '~> 1.9'
   pod 'tealium-swift/TealiumAppData', '~> 1.9'
   pod 'tealium-swift/TealiumDeviceData', '~> 1.9'
