--- a/TealiumFirebase.xcodeproj/xcshareddata/xcschemes/TealiumFirebase.xcscheme
+++ b/TealiumFirebase.xcodeproj/xcshareddata/xcschemes/TealiumFirebase.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1030"
+   LastUpgradeVersion = "1200"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,7 +14,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "CF17EB5322F0E3D700C6086B"
+               BlueprintIdentifier = "CF6C44CA2519986B002648A0"
                BuildableName = "TealiumFirebase.framework"
                BlueprintName = "TealiumFirebase"
                ReferencedContainer = "container:TealiumFirebase.xcodeproj">
@@ -28,12 +28,20 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "CF6C44D32519986B002648A0"
+               BuildableName = "TealiumFirebaseTests.xctest"
+               BlueprintName = "TealiumFirebaseTests"
+               ReferencedContainer = "container:TealiumFirebase.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Release"
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -42,17 +50,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CF17EB5322F0E3D700C6086B"
-            BuildableName = "TealiumFirebase.framework"
-            BlueprintName = "TealiumFirebase"
-            ReferencedContainer = "container:TealiumFirebase.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -63,7 +60,7 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "CF17EB5322F0E3D700C6086B"
+            BlueprintIdentifier = "CF6C44CA2519986B002648A0"
             BuildableName = "TealiumFirebase.framework"
             BlueprintName = "TealiumFirebase"
             ReferencedContainer = "container:TealiumFirebase.xcodeproj">
