--- a/TealiumFirebaseExample/TealiumFirebaseExample/firebase.json
+++ b/TealiumFirebaseExample/TealiumFirebaseExample/firebase.json
@@ -22,16 +22,18 @@
         "currency_code": "event.param_currency",
         "travel_destination": "event.param_destination",
         "end_date": "event.param_end_date",
-        "flight_number": "pevent.param_flight_number",
+        "flight_number": "event.param_flight_number",
         "group_id": "event.param_group_id",
         "current_index": "param_index",
-        "product_brand": "event.param_item_brand",
-        "product_category": "event.param_item_category",
-        "product_id": "event.param_item_id",
-        "product_list": "event.param_item_list",
-        "product_location_id": "event.param_item_location_id",
-        "product_name": "event.param_item_name",
-        "product_variant": "event.param_item_variant",
+        "product_brand": "items.param_item_brand",
+        "product_category": "items.param_item_category",
+        "product_id": "items.param_item_id",
+        "product_unit_price": "items.param_price",
+        "product_quantity": "items.param_quantity",
+        "product_list": "items.param_item_list",
+        "product_location_id": "items.param_item_location_id",
+        "product_name": "items.param_item_name",
+        "product_variant": "items.param_item_variant",
         "current_level": "event.param_level",
         "most_recent_location": "event.param_location",
         "campaign_medium": "event.param_medium",
@@ -39,8 +41,6 @@
         "number_pax": "event.param_number_pax",
         "number_rooms": "event.param_number_rooms",
         "travel_origin": "event.param_origin",
-        "product_unit_price": "event.param_price",
-        "product_quantity": "event.param_quantity",
         "score": "event.param_score",
         "search_keyword": "event.param_search_term",
         "order_shipping_amount": "event.param_shipping",
