Bug/custom params (#9)
* initial update - wip

* test spm - wip

* test carthage

* test SPM

* 2.0.2

* Update json example

* Minor update

Co-authored-by: christinasund <christina.sund@tealium.com>

--- a/TealiumFirebaseExample/TealiumFirebaseExample/firebase.json
+++ b/TealiumFirebaseExample/TealiumFirebaseExample/firebase.json
@@ -59,7 +59,10 @@
         "screen_class": "firebase_screen_class",
         "customer_property": "firebase_property_name",
         "customer_value": "firebase_property_value",
-        "customer_id": "firebase_user_id"
+        "customer_id": "firebase_user_id",
+        "customparam1": "event.custom_param_1_mapped",
+        "customparam2": "event.custom_param_2_mapped",
+        "character": "event.character"
     },
     "commands": {
         "launch": "config",
